// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminPanelMainComponent renders AdminPanelMainComponent and take a snapshop 1`] = `
<DocumentFragment>
  .c3 {
  padding: 1rem;
}

.c20 {
  font-size: 0.75rem;
  font-weight: 400;
  text-transform: initial;
  color: #9E9E9E;
  margin: 0.5rem 0;
}

.c20 .info-icon button {
  border: none;
  background: inherit;
  margin-left: 0.5rem;
}

.c20 .info-icon button svg {
  fill: #7E7E7E;
  width: 0.75rem;
  height: 0.75rem;
}

.c17 {
  margin: 0 0 6.8rem 0;
}

.c19 {
  margin: 1rem 0;
}

.c4 {
  display: flex;
  align-items: center;
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2.375rem;
  height: 2.375rem;
  border-radius: 50%;
  background: #277AFF;
  color: #fff;
}

.c6 {
  margin-left: 0.5rem;
}

.c6 >span {
  color: var(--text - text - primary,#222);
  font-family: Open Sans;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.375rem;
}

.c0 {
  width: 100%;
  display: flex;
  flex-direction: row;
}

.c1 {
  width: 17rem;
  position: relative;
  box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.15);
  background: #222;
  color: #fff;
}

.c22 {
  width: calc(100vw - 17rem);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c2 {
  padding: 1rem 0.88rem 0.94rem 0.94rem;
  background: #222;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 0.3rem;
}

.c2 >h3 {
  color: #FFF;
  font-family: Open Sans;
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 1.5rem;
}

.c2 >svg {
  fill: white;
  transform: rotate(-90deg);
  cursor: pointer;
}

.c10 >button {
  height: 3rem;
  padding: 0.8rem 1rem 0.8rem 1rem;
}

.c10 >button >.cds--side-nav__icon {
  margin-right: 0.7rem;
}

.c10 span {
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
  color: #fff!important;
}

.c11 a {
  height: 3rem!important;
  padding-left: 2.7rem!important;
}

.c7 {
  max-height: calc(100vh - 12rem);
}

.c8 {
  height: 100%;
}

.c12 button {
  width: 100%;
  padding-left: 2.5rem;
}

.c16 {
  color: var(--primary-black-80-giga-dark-grey);
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.25rem;
  letter-spacing: 0.01rem;
}

.c18 {
  margin-top: 1.5rem;
}

.c18 .cds--list-box {
  background: white;
}

.c18 .cds--list-box__menu {
  height: !important;
  max-height: 10rem!important;
  overflow-y: auto;
}

.c13 >.cds--modal-container {
  background: #383838;
  width: 38rem;
  height: auto;
  background: #fff;
}

.c13 >.cds--modal-container button svg {
  fill: #222!important;
}

.c13 >.cds--modal-container .cds--modal-close:hover {
  background-color: transparent!important;
}

.c14 >h3 {
  color: var(--text-text-primary, #161616);
  font-family: Open Sans;
  font-size: 1.25rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.75rem;
}

.c14 button svg {
  fill: #fff;
}

.c14 .giga-text {
  display: flex;
  color: #fff;
  font-size: 2.4rem;
  font-weight: bolder;
}

.c14 .giga-text span:first-child {
  font-weight: 100;
}

.c14 .cds--modal-close:hover {
  background-color: #181818;
}

.c15 {
  margin-bottom: 1.5rem;
}

.c15 .field-wrapper span {
  color: #fff;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
}

.c15 .field-wrapper input {
  background: #474747;
  color: #fff;
  border: none;
}

.c15 .share-icons-container span {
  color: #fff;
}

.c15 .share-icons-container .social-share-icons svg {
  fill: #fff;
}

.c9 .cds--contained-list-item__content:not(:disabled):hover {
  color: #181818;
  background: #fff;
}

.c9 .cds--contained-list-item__content {
  display: flex;
  align-items: center;
  padding: 0.8rem 1rem 0.8rem 1rem!important;
  cursor: pointer;
}

.c9 >.cds--contained-list-item__icon,
.c9 >.cds--side-nav__icon {
  margin-right: 0.7rem;
}

.c9 >.cds--contained-list-item__content,
.c9 >.cds--side-nav__link {
  color: #fff;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

.c21 {
  border: 0.0625rem solid #E6E6E6;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.c21 >button {
  max-width: 100%;
  width: 100%;
  padding: 1.3rem 1rem 1.3rem 1rem;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3>
          Creator App
        </h3>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M26 20H6a2 2 0 00-2 2v4a2 2 0 002 2H26a2 2 0 002-2V22A2 2 0 0026 20zm0 6H6V22H26zM17 7.828L19.586 10.414 21 9 16 4 11 9 12.414 10.414 15 7.828 15 14 4 14 4 16 28 16 28 14 17 14 17 7.828z"
          />
        </svg>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            tA
          </div>
          <div
            class="c6"
          >
            <span>
              test Admin
            </span>
          </div>
        </div>
      </div>
      <div
        class="scrollbar-container c7 ps"
      >
        <div
          class="c8"
        >
          <ul
            class="cds--side-nav__items"
          >
            <a
              href="/admin/giga-layer"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,24a.9967.9967,0,0,1-.4741-.12l-13-7L3.4741,15.12,16,21.8643,28.5259,15.12l.9482,1.7607-13,7A.9967.9967,0,0,1,16,24Z"
                      />
                      <path
                        d="M16 30a.9967.9967 0 01-.4741-.12l-13-7L3.4741 21.12 16 27.8643 28.5259 21.12l.9482 1.7607-13 7A.9967.9967 0 0116 30zM16 18a.9967.9967 0 01-.4741-.12l-13-7a1 1 0 010-1.7607l13-7a.9982.9982 0 01.9482 0l13 7a1 1 0 010 1.7607l-13 7A.9967.9967 0 0116 18zM5.1094 10L16 15.8643 26.8906 10 16 4.1358z"
                      />
                    </svg>
                  </div>
                  <div>
                    Giga layers
                  </div>
                </div>
              </li>
            </a>
            <li
              class="cds--side-nav__item cds--side-nav__item--icon c10"
            >
              <button
                aria-expanded="false"
                class="cds--side-nav__submenu"
                tabindex="0"
                type="button"
              >
                <div
                  class="cds--side-nav__icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M30 30H28V25a5.0057 5.0057 0 00-5-5V18a7.0078 7.0078 0 017 7zM22 30H20V25a5.0059 5.0059 0 00-5-5H9a5.0059 5.0059 0 00-5 5v5H2V25a7.0082 7.0082 0 017-7h6a7.0082 7.0082 0 017 7zM20 2V4a5 5 0 010 10v2A7 7 0 0020 2zM12 4A5 5 0 117 9a5 5 0 015-5m0-2a7 7 0 107 7A7 7 0 0012 2z"
                    />
                  </svg>
                </div>
                <span
                  class="cds--side-nav__submenu-title"
                  title="User Management"
                >
                  User Management
                </span>
                <div
                  class="cds--side-nav__icon cds--side-nav__icon--small cds--side-nav__submenu-chevron"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 22L6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
                    />
                  </svg>
                </div>
              </button>
              <ul
                class="cds--side-nav__menu"
              >
                <a
                  data-testid="admin-user-list"
                  href="/admin/users"
                />
                <li
                  class="cds--side-nav__menu-item c11"
                >
                  <a
                    data-testid="admin-user-list"
                    href="/admin/users"
                  />
                  <a
                    class="cds--side-nav__link"
                  >
                    <span
                      class="cds--side-nav__link-text"
                    >
                      User
                    </span>
                  </a>
                </li>
                <a
                  data-testid="admin-roles-list"
                  href="/admin/roles"
                />
                <li
                  class="cds--side-nav__menu-item c11"
                >
                  <a
                    data-testid="admin-roles-list"
                    href="/admin/roles"
                  />
                  <a
                    class="cds--side-nav__link"
                  >
                    <span
                      class="cds--side-nav__link-text"
                    >
                      Roles
                    </span>
                  </a>
                </li>
              </ul>
            </li>
            <a
              href="/admin/api-keys"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="24.5"
                        cy="9.5"
                        r="1.5"
                      />
                      <path
                        d="M17.4143,22H12V16.5857l6.03-6.03A5.3518,5.3518,0,0,1,18,10a6,6,0,1,1,6,6,5.3583,5.3583,0,0,1-.5559-.03ZM14,20h2.5857l6.1706-6.1709.5174.0957A3.935,3.935,0,0,0,24,14a4.0507,4.0507,0,1,0-3.925-3.2729l.0952.5166L14,17.4143Z"
                      />
                      <path
                        d="M28,18v8H10V6h4V4H4A2.0025,2.0025,0,0,0,2,6V26a2.0025,2.0025,0,0,0,2,2H28a2.0025,2.0025,0,0,0,2-2V18ZM4,6H8V26H4Z"
                      />
                    </svg>
                  </div>
                  <div>
                    Api Key Request
                  </div>
                </div>
              </li>
            </a>
            <a
              href="/admin/data-source"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24,3H8A2,2,0,0,0,6,5V27a2,2,0,0,0,2,2H24a2,2,0,0,0,2-2V5A2,2,0,0,0,24,3Zm0,2v6H8V5ZM8,19V13H24v6Zm0,8V21H24v6Z"
                      />
                      <circle
                        cx="11"
                        cy="8"
                        r="1"
                      />
                      <circle
                        cx="11"
                        cy="16"
                        r="1"
                      />
                      <circle
                        cx="11"
                        cy="24"
                        r="1"
                      />
                    </svg>
                  </div>
                  <div>
                    Schools Master data
                  </div>
                </div>
              </li>
            </a>
            <a
              href="/admin/about-us"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="19"
                        r="2"
                      />
                      <path
                        d="M23.7769,18.4785A8.64,8.64,0,0,0,16,13a8.64,8.64,0,0,0-7.7769,5.4785L8,19l.2231.5215A8.64,8.64,0,0,0,16,25a8.64,8.64,0,0,0,7.7769-5.4785L24,19ZM16,23a4,4,0,1,1,4-4A4.0045,4.0045,0,0,1,16,23Z"
                      />
                      <path
                        d="M27,3H5A2,2,0,0,0,3,5V27a2,2,0,0,0,2,2H27a2,2,0,0,0,2-2V5A2,2,0,0,0,27,3ZM5,5H27V9H5ZM5,27V11H27V27Z"
                      />
                    </svg>
                  </div>
                  <div>
                    About us
                  </div>
                </div>
              </li>
            </a>
            <a
              href="/admin/schools"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M28,2H16a2.002,2.002,0,0,0-2,2V14H4a2.002,2.002,0,0,0-2,2V30H30V4A2.0023,2.0023,0,0,0,28,2ZM9,28V21h4v7Zm19,0H15V20a1,1,0,0,0-1-1H8a1,1,0,0,0-1,1v8H4V16H16V4H28Z"
                      />
                      <path
                        d="M18 8H20V10H18zM24 8H26V10H24zM18 14H20V16H18zM24 14H26V16H24zM18 20H20V22H18zM24 20H26V22H24z"
                      />
                    </svg>
                  </div>
                  <div>
                    School(s)
                  </div>
                </div>
              </li>
            </a>
            <a
              href="/admin/country"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14.0158,14.0158,0,0,0,16,2Zm5,3.1055a12.0136,12.0136,0,0,1,2.9158,1.8994L23.5034,8H21ZM13.3784,27.7026A11.9761,11.9761,0,0,1,8.1157,6.9761L9.4648,9h3.3423l-1.5,4H7.2793L5.8967,17.1475,8.4648,21h5l1.4319,2.1475ZM16,28c-.2034,0-.4016-.02-.6025-.03l1.3967-4.19a1.9876,1.9876,0,0,0-.2334-1.7412l-1.4319-2.1475A1.9962,1.9962,0,0,0,13.4648,19h-3.93L8.1033,16.8525,8.7207,15H11v2h2V14.1812l2.9363-7.83-1.8726-.7022L13.5571,7H10.5352L9.728,5.7891A11.7941,11.7941,0,0,1,19,4.395V8a2.0025,2.0025,0,0,0,2,2h2.5857A1.9865,1.9865,0,0,0,25,9.4141l.1406-.1407.2818-.68A11.9813,11.9813,0,0,1,27.3,12H22.5986a1.9927,1.9927,0,0,0-1.9719,1.665L20.03,17.1064a1.99,1.99,0,0,0,.991,2.086l2.1647,1.4638,1.4585,3.646A11.9577,11.9577,0,0,1,16,28Zm8.8145-8.6563L22.1,17.5088l-.1-.06L22.5986,14h5.2207a11.743,11.743,0,0,1-1.7441,8.4951Z"
                      />
                    </svg>
                  </div>
                  <div>
                    Country(s)
                  </div>
                </div>
              </li>
            </a>
            <a
              href="/admin/background-task"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14 23H22V25H14zM10 23H12V25H10zM14 18H22V20H14zM10 18H12V20H10zM14 13H22V15H14zM10 13H12V15H10z"
                      />
                      <path
                        d="M25,5H22V4a2,2,0,0,0-2-2H12a2,2,0,0,0-2,2V5H7A2,2,0,0,0,5,7V28a2,2,0,0,0,2,2H25a2,2,0,0,0,2-2V7A2,2,0,0,0,25,5ZM12,4h8V8H12ZM25,28H7V7h3v3H22V7h3Z"
                      />
                    </svg>
                  </div>
                  <div>
                    Background Task
                  </div>
                </div>
              </li>
            </a>
            <a
              href="/admin/contact-message"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z"
                      />
                    </svg>
                  </div>
                  <div>
                    Contact message
                  </div>
                </div>
              </li>
            </a>
            <a
              href="/admin/recent-actions"
            >
              <li
                class="cds--contained-list-item c9 cds--contained-list-item--with-icon"
              >
                <div
                  class="cds--contained-list-item__content"
                >
                  <div
                    class="cds--contained-list-item__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20.59 22L15 16.41 15 7 17 7 17 15.58 22 20.59 20.59 22z"
                      />
                      <path
                        d="M16,2A13.94,13.94,0,0,0,6,6.23V2H4v8h8V8H7.08A12,12,0,1,1,4,16H2A14,14,0,1,0,16,2Z"
                      />
                    </svg>
                  </div>
                  <div>
                    Recent actions
                  </div>
                </div>
              </li>
            </a>
          </ul>
          <div
            class="02 c12"
          >
            <button
              class="cds--btn cds--btn--ghost"
              data-testid="invalidate-cache"
              type="button"
            >
              Invalidate Cache
            </button>
          </div>
          <div
            aria-hidden="true"
            class="cds--modal c13"
            role="presentation"
          >
            <div
              aria-modal="true"
              class="cds--modal-container"
              role="dialog"
            >
              <button
                class="cds--visually-hidden"
                type="button"
              >
                Focus sentinel
              </button>
              <div
                class="cds--modal-container-body"
              >
                <form
                  class="cds--form"
                >
                  <div
                    class="cds--modal-header c14"
                  >
                    <h3
                      class="cds--modal-header__heading cds--type-beta"
                    >
                      Clear Cache
                    </h3>
                    <button
                      aria-label="Close"
                      class="cds--modal-close"
                      title="Close"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="cds--modal-close__icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="cds--modal-content c15"
                    style="padding-bottom: 1.2rem;"
                  >
                    <p
                      class="c16"
                      style="margin-bottom: 1rem;"
                    >
                       Please select the type of cache you want to clear 
                    </p>
                    <div
                      class="cds--form-item"
                    >
                      <fieldset
                        class="cds--radio-button-group cds--radio-button-group--label-right"
                      >
                        <div
                          class="cds--radio-button-wrapper"
                        >
                          <input
                            class="cds--radio-button"
                            id="radio-button-1"
                            name="type"
                            type="radio"
                            value="all"
                          />
                          <label
                            class="cds--radio-button__label"
                            for="radio-button-1"
                          >
                            <span
                              class="cds--radio-button__appearance"
                            />
                            <span
                              class="cds--radio-button__label-text"
                            >
                              All
                            </span>
                          </label>
                        </div>
                        <div
                          class="cds--radio-button-wrapper"
                        >
                          <input
                            checked=""
                            class="cds--radio-button"
                            id="radio-button-2"
                            name="type"
                            type="radio"
                            value="country"
                          />
                          <label
                            class="cds--radio-button__label"
                            for="radio-button-2"
                          >
                            <span
                              class="cds--radio-button__appearance"
                            />
                            <span
                              class="cds--radio-button__label-text"
                            >
                              Country
                            </span>
                          </label>
                        </div>
                        <div
                          class="cds--radio-button-wrapper"
                        >
                          <input
                            class="cds--radio-button"
                            id="radio-button-3"
                            name="type"
                            type="radio"
                            value="layer"
                          />
                          <label
                            class="cds--radio-button__label"
                            for="radio-button-3"
                          >
                            <span
                              class="cds--radio-button__appearance"
                            />
                            <span
                              class="cds--radio-button__label-text"
                            >
                              Layer
                            </span>
                          </label>
                        </div>
                      </fieldset>
                      <div
                        class="cds--radio-button__validation-msg"
                      />
                    </div>
                    <div
                      class="c17"
                    >
                      <div
                        class="cds--list-box__wrapper c18"
                      >
                        <label
                          class="cds--label"
                          for="country"
                          id="downshift-2-label"
                        >
                          Select Country *
                        </label>
                        <div
                          class="cds--combo-box cds--list-box"
                        >
                          <div
                            class="cds--list-box__field"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-labelledby="downshift-2-label"
                              aria-owns="downshift-2-menu"
                              autocomplete="off"
                              class="cds--text-input cds--text-input--empty"
                              id="country"
                              placeholder="Select Country"
                              role="combobox"
                              tabindex="0"
                              title=""
                              type="text"
                              value=""
                            />
                            <button
                              aria-haspopup="true"
                              aria-label="Open"
                              class="cds--list-box__menu-icon"
                              data-toggle="true"
                              role="button"
                              tabindex="-1"
                              title="Open"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                focusable="false"
                                height="16"
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                                />
                              </svg>
                            </button>
                          </div>
                          <ul
                            aria-label="Choose an item"
                            class="cds--list-box__menu"
                            id="downshift-2-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                      <div
                        class="c19"
                      >
                        <p
                          class="c20"
                        >
                           It will clear all cache related to this country.
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cds--modal-footer cds--btn-set"
                  >
                    <button
                      class="cds--btn cds--btn--secondary"
                      type="button"
                    >
                      Cancel
                    </button>
                    <button
                      class="cds--btn cds--btn--primary cds--btn--disabled"
                      disabled=""
                      type="submit"
                    >
                      Clear
                    </button>
                  </div>
                </form>
              </div>
              <button
                class="cds--visually-hidden"
                type="button"
              >
                Focus sentinel
              </button>
            </div>
          </div>
        </div>
        <div
          class="ps__rail-x"
          style="left: 0px; top: 0px;"
        >
          <div
            class="ps__thumb-x"
            style="left: 0px; width: 0px;"
            tabindex="0"
          />
        </div>
        <div
          class="ps__rail-y"
          style="top: 0px; left: 0px;"
        >
          <div
            class="ps__thumb-y"
            style="top: 0px; height: 0px;"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="c21"
      >
        <button
          class="cds--btn cds--btn--ghost"
          type="button"
        >
          Logout
          <svg
            aria-hidden="true"
            class="cds--btn__icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6,30H18a2.0023,2.0023,0,0,0,2-2V25H18v3H6V4H18V7h2V4a2.0023,2.0023,0,0,0-2-2H6A2.0023,2.0023,0,0,0,4,4V28A2.0023,2.0023,0,0,0,6,30Z"
            />
            <path
              d="M20.586 20.586L24.172 17 10 17 10 15 24.172 15 20.586 11.414 22 10 28 16 22 22 20.586 20.586z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="c22"
    >
      <div
        class="cds--loading-overlay cds--loading-overlay--stop"
      >
        <div
          aria-atomic="true"
          aria-live="off"
          class="cds--loading cds--loading--stop"
        >
          <svg
            class="cds--loading__svg"
            viewBox="0 0 100 100"
          >
            <title>
              loading
            </title>
            <circle
              class="cds--loading__stroke"
              cx="50%"
              cy="50%"
              r="44"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdminPanelMainComponent renders AdminPanelTabs and take a snapshop 1`] = `
<DocumentFragment>
  .c13 {
  font-size: 0.75rem;
  font-weight: 400;
  text-transform: initial;
  color: #9E9E9E;
  margin: 0.5rem 0;
}

.c13 .info-icon button {
  border: none;
  background: inherit;
  margin-left: 0.5rem;
}

.c13 .info-icon button svg {
  fill: #7E7E7E;
  width: 0.75rem;
  height: 0.75rem;
}

.c10 {
  margin: 0 0 6.8rem 0;
}

.c12 {
  margin: 1rem 0;
}

.c3 >button {
  height: 3rem;
  padding: 0.8rem 1rem 0.8rem 1rem;
}

.c3 >button >.cds--side-nav__icon {
  margin-right: 0.7rem;
}

.c3 span {
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
  color: #fff!important;
}

.c4 a {
  height: 3rem!important;
  padding-left: 2.7rem!important;
}

.c0 {
  max-height: calc(100vh - 12rem);
}

.c1 {
  height: 100%;
}

.c5 button {
  width: 100%;
  padding-left: 2.5rem;
}

.c9 {
  color: var(--primary-black-80-giga-dark-grey);
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.25rem;
  letter-spacing: 0.01rem;
}

.c11 {
  margin-top: 1.5rem;
}

.c11 .cds--list-box {
  background: white;
}

.c11 .cds--list-box__menu {
  height: !important;
  max-height: 10rem!important;
  overflow-y: auto;
}

.c6 >.cds--modal-container {
  background: #383838;
  width: 38rem;
  height: auto;
  background: #fff;
}

.c6 >.cds--modal-container button svg {
  fill: #222!important;
}

.c6 >.cds--modal-container .cds--modal-close:hover {
  background-color: transparent!important;
}

.c7 >h3 {
  color: var(--text-text-primary, #161616);
  font-family: Open Sans;
  font-size: 1.25rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.75rem;
}

.c7 button svg {
  fill: #fff;
}

.c7 .giga-text {
  display: flex;
  color: #fff;
  font-size: 2.4rem;
  font-weight: bolder;
}

.c7 .giga-text span:first-child {
  font-weight: 100;
}

.c7 .cds--modal-close:hover {
  background-color: #181818;
}

.c8 {
  margin-bottom: 1.5rem;
}

.c8 .field-wrapper span {
  color: #fff;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
}

.c8 .field-wrapper input {
  background: #474747;
  color: #fff;
  border: none;
}

.c8 .share-icons-container span {
  color: #fff;
}

.c8 .share-icons-container .social-share-icons svg {
  fill: #fff;
}

.c2 .cds--contained-list-item__content:not(:disabled):hover {
  color: #181818;
  background: #fff;
}

.c2 .cds--contained-list-item__content {
  display: flex;
  align-items: center;
  padding: 0.8rem 1rem 0.8rem 1rem!important;
  cursor: pointer;
}

.c2 >.cds--contained-list-item__icon,
.c2 >.cds--side-nav__icon {
  margin-right: 0.7rem;
}

.c2 >.cds--contained-list-item__content,
.c2 >.cds--side-nav__link {
  color: #fff;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

<div
    class="scrollbar-container c0 ps"
  >
    <div
      class="c1"
    >
      <ul
        class="cds--side-nav__items"
      >
        <a
          href="/admin/giga-layer"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,24a.9967.9967,0,0,1-.4741-.12l-13-7L3.4741,15.12,16,21.8643,28.5259,15.12l.9482,1.7607-13,7A.9967.9967,0,0,1,16,24Z"
                  />
                  <path
                    d="M16 30a.9967.9967 0 01-.4741-.12l-13-7L3.4741 21.12 16 27.8643 28.5259 21.12l.9482 1.7607-13 7A.9967.9967 0 0116 30zM16 18a.9967.9967 0 01-.4741-.12l-13-7a1 1 0 010-1.7607l13-7a.9982.9982 0 01.9482 0l13 7a1 1 0 010 1.7607l-13 7A.9967.9967 0 0116 18zM5.1094 10L16 15.8643 26.8906 10 16 4.1358z"
                  />
                </svg>
              </div>
              <div>
                Giga layers
              </div>
            </div>
          </li>
        </a>
        <li
          class="cds--side-nav__item cds--side-nav__item--icon c3"
        >
          <button
            aria-expanded="false"
            class="cds--side-nav__submenu"
            tabindex="0"
            type="button"
          >
            <div
              class="cds--side-nav__icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M30 30H28V25a5.0057 5.0057 0 00-5-5V18a7.0078 7.0078 0 017 7zM22 30H20V25a5.0059 5.0059 0 00-5-5H9a5.0059 5.0059 0 00-5 5v5H2V25a7.0082 7.0082 0 017-7h6a7.0082 7.0082 0 017 7zM20 2V4a5 5 0 010 10v2A7 7 0 0020 2zM12 4A5 5 0 117 9a5 5 0 015-5m0-2a7 7 0 107 7A7 7 0 0012 2z"
                />
              </svg>
            </div>
            <span
              class="cds--side-nav__submenu-title"
              title="User Management"
            >
              User Management
            </span>
            <div
              class="cds--side-nav__icon cds--side-nav__icon--small cds--side-nav__submenu-chevron"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 22L6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
                />
              </svg>
            </div>
          </button>
          <ul
            class="cds--side-nav__menu"
          >
            <a
              data-testid="admin-user-list"
              href="/admin/users"
            />
            <li
              class="cds--side-nav__menu-item c4"
            >
              <a
                data-testid="admin-user-list"
                href="/admin/users"
              />
              <a
                class="cds--side-nav__link"
              >
                <span
                  class="cds--side-nav__link-text"
                >
                  User
                </span>
              </a>
            </li>
            <a
              data-testid="admin-roles-list"
              href="/admin/roles"
            />
            <li
              class="cds--side-nav__menu-item c4"
            >
              <a
                data-testid="admin-roles-list"
                href="/admin/roles"
              />
              <a
                class="cds--side-nav__link"
              >
                <span
                  class="cds--side-nav__link-text"
                >
                  Roles
                </span>
              </a>
            </li>
          </ul>
        </li>
        <a
          href="/admin/api-keys"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="24.5"
                    cy="9.5"
                    r="1.5"
                  />
                  <path
                    d="M17.4143,22H12V16.5857l6.03-6.03A5.3518,5.3518,0,0,1,18,10a6,6,0,1,1,6,6,5.3583,5.3583,0,0,1-.5559-.03ZM14,20h2.5857l6.1706-6.1709.5174.0957A3.935,3.935,0,0,0,24,14a4.0507,4.0507,0,1,0-3.925-3.2729l.0952.5166L14,17.4143Z"
                  />
                  <path
                    d="M28,18v8H10V6h4V4H4A2.0025,2.0025,0,0,0,2,6V26a2.0025,2.0025,0,0,0,2,2H28a2.0025,2.0025,0,0,0,2-2V18ZM4,6H8V26H4Z"
                  />
                </svg>
              </div>
              <div>
                Api Key Request
              </div>
            </div>
          </li>
        </a>
        <a
          href="/admin/data-source"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24,3H8A2,2,0,0,0,6,5V27a2,2,0,0,0,2,2H24a2,2,0,0,0,2-2V5A2,2,0,0,0,24,3Zm0,2v6H8V5ZM8,19V13H24v6Zm0,8V21H24v6Z"
                  />
                  <circle
                    cx="11"
                    cy="8"
                    r="1"
                  />
                  <circle
                    cx="11"
                    cy="16"
                    r="1"
                  />
                  <circle
                    cx="11"
                    cy="24"
                    r="1"
                  />
                </svg>
              </div>
              <div>
                Schools Master data
              </div>
            </div>
          </li>
        </a>
        <a
          href="/admin/about-us"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="16"
                    cy="19"
                    r="2"
                  />
                  <path
                    d="M23.7769,18.4785A8.64,8.64,0,0,0,16,13a8.64,8.64,0,0,0-7.7769,5.4785L8,19l.2231.5215A8.64,8.64,0,0,0,16,25a8.64,8.64,0,0,0,7.7769-5.4785L24,19ZM16,23a4,4,0,1,1,4-4A4.0045,4.0045,0,0,1,16,23Z"
                  />
                  <path
                    d="M27,3H5A2,2,0,0,0,3,5V27a2,2,0,0,0,2,2H27a2,2,0,0,0,2-2V5A2,2,0,0,0,27,3ZM5,5H27V9H5ZM5,27V11H27V27Z"
                  />
                </svg>
              </div>
              <div>
                About us
              </div>
            </div>
          </li>
        </a>
        <a
          href="/admin/schools"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M28,2H16a2.002,2.002,0,0,0-2,2V14H4a2.002,2.002,0,0,0-2,2V30H30V4A2.0023,2.0023,0,0,0,28,2ZM9,28V21h4v7Zm19,0H15V20a1,1,0,0,0-1-1H8a1,1,0,0,0-1,1v8H4V16H16V4H28Z"
                  />
                  <path
                    d="M18 8H20V10H18zM24 8H26V10H24zM18 14H20V16H18zM24 14H26V16H24zM18 20H20V22H18zM24 20H26V22H24z"
                  />
                </svg>
              </div>
              <div>
                School(s)
              </div>
            </div>
          </li>
        </a>
        <a
          href="/admin/country"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14.0158,14.0158,0,0,0,16,2Zm5,3.1055a12.0136,12.0136,0,0,1,2.9158,1.8994L23.5034,8H21ZM13.3784,27.7026A11.9761,11.9761,0,0,1,8.1157,6.9761L9.4648,9h3.3423l-1.5,4H7.2793L5.8967,17.1475,8.4648,21h5l1.4319,2.1475ZM16,28c-.2034,0-.4016-.02-.6025-.03l1.3967-4.19a1.9876,1.9876,0,0,0-.2334-1.7412l-1.4319-2.1475A1.9962,1.9962,0,0,0,13.4648,19h-3.93L8.1033,16.8525,8.7207,15H11v2h2V14.1812l2.9363-7.83-1.8726-.7022L13.5571,7H10.5352L9.728,5.7891A11.7941,11.7941,0,0,1,19,4.395V8a2.0025,2.0025,0,0,0,2,2h2.5857A1.9865,1.9865,0,0,0,25,9.4141l.1406-.1407.2818-.68A11.9813,11.9813,0,0,1,27.3,12H22.5986a1.9927,1.9927,0,0,0-1.9719,1.665L20.03,17.1064a1.99,1.99,0,0,0,.991,2.086l2.1647,1.4638,1.4585,3.646A11.9577,11.9577,0,0,1,16,28Zm8.8145-8.6563L22.1,17.5088l-.1-.06L22.5986,14h5.2207a11.743,11.743,0,0,1-1.7441,8.4951Z"
                  />
                </svg>
              </div>
              <div>
                Country(s)
              </div>
            </div>
          </li>
        </a>
        <a
          href="/admin/background-task"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 23H22V25H14zM10 23H12V25H10zM14 18H22V20H14zM10 18H12V20H10zM14 13H22V15H14zM10 13H12V15H10z"
                  />
                  <path
                    d="M25,5H22V4a2,2,0,0,0-2-2H12a2,2,0,0,0-2,2V5H7A2,2,0,0,0,5,7V28a2,2,0,0,0,2,2H25a2,2,0,0,0,2-2V7A2,2,0,0,0,25,5ZM12,4h8V8H12ZM25,28H7V7h3v3H22V7h3Z"
                  />
                </svg>
              </div>
              <div>
                Background Task
              </div>
            </div>
          </li>
        </a>
        <a
          href="/admin/contact-message"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z"
                  />
                </svg>
              </div>
              <div>
                Contact message
              </div>
            </div>
          </li>
        </a>
        <a
          href="/admin/recent-actions"
        >
          <li
            class="cds--contained-list-item c2 cds--contained-list-item--with-icon"
          >
            <div
              class="cds--contained-list-item__content"
            >
              <div
                class="cds--contained-list-item__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.59 22L15 16.41 15 7 17 7 17 15.58 22 20.59 20.59 22z"
                  />
                  <path
                    d="M16,2A13.94,13.94,0,0,0,6,6.23V2H4v8h8V8H7.08A12,12,0,1,1,4,16H2A14,14,0,1,0,16,2Z"
                  />
                </svg>
              </div>
              <div>
                Recent actions
              </div>
            </div>
          </li>
        </a>
      </ul>
      <div
        class="c5"
      >
        <button
          class="cds--btn cds--btn--ghost"
          data-testid="invalidate-cache"
          type="button"
        >
          Invalidate Cache
        </button>
      </div>
      <div
        aria-hidden="true"
        class="cds--modal c6"
        role="presentation"
      >
        <div
          aria-modal="true"
          class="cds--modal-container"
          role="dialog"
        >
          <button
            class="cds--visually-hidden"
            type="button"
          >
            Focus sentinel
          </button>
          <div
            class="cds--modal-container-body"
          >
            <form
              class="cds--form"
            >
              <div
                class="cds--modal-header c7"
              >
                <h3
                  class="cds--modal-header__heading cds--type-beta"
                >
                  Clear Cache
                </h3>
                <button
                  aria-label="Close"
                  class="cds--modal-close"
                  title="Close"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="cds--modal-content c8"
                style="padding-bottom: 1.2rem;"
              >
                <p
                  class="c9"
                  style="margin-bottom: 1rem;"
                >
                   Please select the type of cache you want to clear 
                </p>
                <div
                  class="cds--form-item"
                >
                  <fieldset
                    class="cds--radio-button-group cds--radio-button-group--label-right"
                  >
                    <div
                      class="cds--radio-button-wrapper"
                    >
                      <input
                        class="cds--radio-button"
                        id="radio-button-1"
                        name="type"
                        type="radio"
                        value="all"
                      />
                      <label
                        class="cds--radio-button__label"
                        for="radio-button-1"
                      >
                        <span
                          class="cds--radio-button__appearance"
                        />
                        <span
                          class="cds--radio-button__label-text"
                        >
                          All
                        </span>
                      </label>
                    </div>
                    <div
                      class="cds--radio-button-wrapper"
                    >
                      <input
                        checked=""
                        class="cds--radio-button"
                        id="radio-button-2"
                        name="type"
                        type="radio"
                        value="country"
                      />
                      <label
                        class="cds--radio-button__label"
                        for="radio-button-2"
                      >
                        <span
                          class="cds--radio-button__appearance"
                        />
                        <span
                          class="cds--radio-button__label-text"
                        >
                          Country
                        </span>
                      </label>
                    </div>
                    <div
                      class="cds--radio-button-wrapper"
                    >
                      <input
                        class="cds--radio-button"
                        id="radio-button-3"
                        name="type"
                        type="radio"
                        value="layer"
                      />
                      <label
                        class="cds--radio-button__label"
                        for="radio-button-3"
                      >
                        <span
                          class="cds--radio-button__appearance"
                        />
                        <span
                          class="cds--radio-button__label-text"
                        >
                          Layer
                        </span>
                      </label>
                    </div>
                  </fieldset>
                  <div
                    class="cds--radio-button__validation-msg"
                  />
                </div>
                <div
                  class="c10"
                >
                  <div
                    class="cds--list-box__wrapper c11"
                  >
                    <label
                      class="cds--label"
                      for="country"
                      id="downshift-0-label"
                    >
                      Select Country *
                    </label>
                    <div
                      class="cds--combo-box cds--list-box"
                    >
                      <div
                        class="cds--list-box__field"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-0-label"
                          aria-owns="downshift-0-menu"
                          autocomplete="off"
                          class="cds--text-input cds--text-input--empty"
                          id="country"
                          placeholder="Select Country"
                          role="combobox"
                          tabindex="0"
                          title=""
                          type="text"
                          value=""
                        />
                        <button
                          aria-haspopup="true"
                          aria-label="Open"
                          class="cds--list-box__menu-icon"
                          data-toggle="true"
                          role="button"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </button>
                      </div>
                      <ul
                        aria-label="Choose an item"
                        class="cds--list-box__menu"
                        id="downshift-0-menu"
                        role="listbox"
                      />
                    </div>
                  </div>
                  <div
                    class="c12"
                  >
                    <p
                      class="c13"
                    >
                       It will clear all cache related to this country.
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="cds--modal-footer cds--btn-set"
              >
                <button
                  class="cds--btn cds--btn--secondary"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="cds--btn cds--btn--primary cds--btn--disabled"
                  disabled=""
                  type="submit"
                >
                  Clear
                </button>
              </div>
            </form>
          </div>
          <button
            class="cds--visually-hidden"
            type="button"
          >
            Focus sentinel
          </button>
        </div>
      </div>
    </div>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </div>
  .c0 {
  border: 0.0625rem solid #E6E6E6;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.c0 >button {
  max-width: 100%;
  width: 100%;
  padding: 1.3rem 1rem 1.3rem 1rem;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

<div
    class="c0"
  >
    <button
      class="cds--btn cds--btn--ghost"
      type="button"
    >
      Logout
      <svg
        aria-hidden="true"
        class="cds--btn__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6,30H18a2.0023,2.0023,0,0,0,2-2V25H18v3H6V4H18V7h2V4a2.0023,2.0023,0,0,0-2-2H6A2.0023,2.0023,0,0,0,4,4V28A2.0023,2.0023,0,0,0,6,30Z"
        />
        <path
          d="M20.586 20.586L24.172 17 10 17 10 15 24.172 15 20.586 11.414 22 10 28 16 22 22 20.586 20.586z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
